<resources>
    <string name="app_name">Air Meteo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="don_t_have_an_account_signup">Don\'t Have An Account? <a>Signup</a></string>

    <!-- Nav bar strings -->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_account">Account</string>
    <string name="title_chart">Chart</string>

    <!-- Login screen strings -->
    <string name="title_login">"Welcome back"</string>
    <string name="title_login_description">Login to your account</string>

    <string name="prompt_user">User Name</string>
    <string name="prompt_email_format">user@mail.com</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_log_in">Login</string>

    <string name="option_register">Don\'t have account?</string>

    <string name="error_invalid_username">Not a valid username</string>
    <string name="error_invalid_password">Password must be >5 characters</string>
    <string name="error_login_failed">"Login failed"</string>

    <!-- Register screen strings -->
    <string name="title_register_description">Create your new account</string>

    <string name="prompt_register">Register</string>
    <string name="prompt_forgot_password">Forgot password ?</string>

    <string name="option_login">Already have an account?</string>
    <string name="option_remember">Remember Me</string>
    <string name="option_continue_with">Or continue with</string>

    <!-- Landing screen strings -->
    <string name="title_landing">Let us take care for your health</string>
    <string name="option_landing">Create an account</string>

    <!-- Default string for null response -->
    <string name="default_place">UIT</string>
    <string name="default_location">Thu Duc, Ho Chi Minh City</string>

    <string name="good_weather_status">GOOD</string>
    <string name="bad_weather_status">BAD</string>

    <!-- String relate to unit -->
    <string name="rainfall">mm</string>
    <string name="sunAltitude">°</string>
    <string name="sunAzimuth">°</string>
    <string name="sunIrradiance">W/m²</string>
    <string name="sunZenith">°</string>
    <string name="temperature">°C</string>
    <string name="humidity">%</string>
    <string name="windDirection">°</string>
    <string name="windSpeed">m/s</string>
    <string name="PM25">µg/m³</string>
    <string name="PM10">µg/m³</string>
    <string name="CO2">ppm</string>
    <string name="CO2_average">ppm</string>
    <string name="NO2">ppb</string>
    <string name="NO">ppb</string>
    <string name="O3">ppb</string>
    <string name="SO2">%</string>
    <string name="uVIndex"></string>
    <string name="AQI"></string>
    <string name="AQI_Predict"></string>
    <string name="title_feature">Feature</string>
    <string name="title_setting">Setting</string>
    <string name="title_user">User</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home_page_intro_text">Here Is An Application for UITers, provides useful information for you to have a great day at UIT!</string>
    <string name="home_page_welcome">Welcome to</string>
    <string name="home_page_sign_in">Sign In</string>
    <string name="home_page_sign_up">Sign Up</string>
    <string name="home_page_continue_with_google">Continue With Google</string>
    <string name="home_page_reset_your_password">Reset your password?</string>
    <string name="chart_attribute">Attribute</string>
    <string name="chart_timeframe">Timeframe</string>
    <string name="chart_ending">Ending</string>
    <string name="chart_btn_show">Show</string>
    <string name="feature_weather_information">Weather Information</string>
    <string name="feature_pollution_information">Pollution Information</string>
    <string name="loading_please_wait">Please wait ...</string>
    <string name="frag_sign_in_sign_in">Sign In</string>
    <string name="frag_sign_in_user_name">User Name</string>
    <string name="frag_sign_in_enter_your_user_name">Enter Your User Name...</string>
    <string name="frag_sign_in_password">Password</string>
    <string name="frag_sign_in_enter_your_password">Enter Your Password...</string>
    <string name="frag_sign_in_log_in">Log In</string>
    <string name="frag_sign_in_back">Back</string>
    <string name="frag_sign_up_sign_up">Sign Up</string>
    <string name="frag_sign_up_email">Email</string>
    <string name="frag_sign_up_enter_your_email">Enter Your Email..</string>
    <string name="frag_sign_up_confirm_your_password">Confirm Your Password</string>
    <string name="frag_sign_up_btn_signup">Signup</string>
    <string name="frag_user_firstname">First Name</string>
    <string name="frag_user_last_name">Last Name</string>
    <string name="frag_user_user_name">User Name</string>
    <string name="frag_user_email">Email</string>
    <string name="frag_user_language">Language</string>
    <string name="frag_user_log_out">Log Out</string>
    <string name="popup_humidity">Humidity (%)</string>
    <string name="popup_rainfall_mm">Rainfall (mm)</string>
    <string name="popup_temperature_c">Temperature (°C)</string>
    <string name="popup_wind_direction">Wind Direction (°)</string>
    <string name="popup_wind_speed_m_s">Wind Speed (m/s)</string>
    <string name="iten_updated_at">Updated at:</string>

    <string name="key_map">AIzaSyCbH6T6-S25rTVrbVHWu7rVLpI5VpYcOTo</string>
</resources>