<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/nav_ic_explore"
        android:title="@string/title_home" />
<!--    <item-->
<!--        android:id="@+id/navigation_dashboard"-->
<!--        android:icon="@drawable/nav_ic_dashboard"-->
<!--        android:title="@string/title_dashboard" />-->
    <item
        android:id="@+id/navigation_graph"
        android:icon="@drawable/nav_ic_chart"
        android:title="@string/title_chart" />
    <item
        android:id="@+id/navigation_feature"
        android:icon="@drawable/nav_ic_dashboard"
        android:title="@string/title_feature" />

    <!--<item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="Setting" />-->
    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_user" />

<!--    <item-->
<!--        android:id="@+id/navigation_account"-->
<!--        android:icon="@drawable/nav_ic_account"-->
<!--        android:title="@string/title_account"/>-->
</menu>