<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.sampleproject.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

<!--    <fragment-->
<!--        android:id="@+id/navigation_dashboard"-->
<!--        android:name="com.example.sampleproject.fragment.DashBoardContainerFragment"-->
<!--        android:label="@string/title_dashboard"-->
<!--        tools:layout="@layout/fragment_dashboard_container" />-->
    <fragment
        android:id="@+id/navigation_graph"
        android:name="com.example.sampleproject.fragment.ChartFragment"
        android:label="@string/title_chart"
        tools:layout="@layout/fragment_chart" />
    <fragment
        android:id="@+id/navigation_feature"
        android:name="com.example.sampleproject.fragment.FeatureFragment"
        android:label="@string/title_feature"
        tools:layout="@layout/fragment_feature" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.sampleproject.fragment.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" />
</navigation>